# server---Copy--2-

./: 1.py  Action_plan_tgsrtc.py  Etl_main.py  Input_Data_DM.py  Input_Data_RM.py  README.md  Ratios_DM.py  Ratios_RM.py  SERVICEMASTER_HCU.csv  action_plan.py  action_plan_rm.py  admin.py  app_ui_admin.py  app_ui_dm.py  auth.py  backend_admin.py  backend_dm.py  calender.csv  create_rag_documents.py  db_config.py  depot_UI.py  depot_dashboard_dm.py  depot_dashboard_rm.py  depot_list.py  driver_dashboard_DM.py  driver_dashboard_RM.py  driver_depot_dashboard_ui.py  edit_sheet.py  eight_ratios_DM.py  eight_ratios_RM.py  eight_ratios_tgsrtc.py  forecast.py  health.csv  insert.py  kms_hrs.py  login.py  models.py  operational_data.py  pending.py  schema.sql  (+4 more)
__pycache__/dynamic_scheduling_master/: .gitignore  app.py  buttons.py  main.py  pyproject.toml
__pycache__/dynamic_scheduling_master/data/logs/: ingest_log.csv
__pycache__/dynamic_scheduling_master/data/master/: holiday_calendar.csv  service_master.csv  telugu_calendar.csv
__pycache__/dynamic_scheduling_master/data/processed/: ops_daily_gold.parquet
__pycache__/dynamic_scheduling_master/model/xgb_v1/: config.yaml  features.json  xgb_model.joblib
__pycache__/dynamic_scheduling_master/notebooks/: ops_dashboard.ipynb  roughbook.ipynb
__pycache__/dynamic_scheduling_master/output/evaluations/: evaluation_history.csv  metrics_overall.json  metrics_per_depot.csv  test_predictions.parquet
__pycache__/dynamic_scheduling_master/tests/: conftest.py  test_app.py
(+12598 files in other folders)
