[project]
name = "dynamic-scheduling"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.1",
    "openpyxl>=3.1.5",
    "pandas>=1.4.0",
    "pyarrow>=23.0.0",
    "scikit-learn>=1.8.0",
    "xgboost>=3.1.3",
    "streamlit>=1.45.0",
    "plotly>=6.0.0",
    "requests>=2.32.0",
    "scipy>=1.15.0",
    "joblib>=1.5.0",
    "pyyaml>=6.0",
]

[dependency-groups]
dev = [
    "black>=26.1.0",
    "ipykernel>=7.1.0",
    "pytest>=9.0.2",
    "ruff>=0.14.14",
]
